@@ -59,6 +59,7 @@ AC_ARG_ENABLE(nsbundle,
 
 NSBUNDLE_CPPFLAGS=
 NSBUNDLE_LDFLAGS=
+NSBUNDLE_GTK_DIR=
 
 #check header for nsbundle
 if test "x$nsbundle" = "xyes"; then
@@ -71,6 +72,7 @@ if test "x$nsbundle" = "xyes"; then
       if test "x$NSFoundation" = "x$no"; then
 	 AC_MSG_ERROR([You need development tools to use nsbundle. Make sure XCode is installed." ])
       fi
+      NSBUNDLE_GTK_DIR="../GTK"
       NSBUNDLE_LDFLAGS="-framework Cocoa "
       AC_LANG_POP([Objective C])
    else
@@ -85,7 +87,8 @@ if test "x$nsbundle" = "xyes"; then
       fi
       CPPFLAGS="$saved_CPPFLAGS"
       NSBUNDLE_CPPFLAGS=" -I$GNUSTEP_SYSTEM_ROOT/Library/Headers "
-      NSBUNDLE_LDFLAGS="-rdynamic -fgnu-runtime -L$GNUSTEP_SYSTEM_ROOT/Library/Libraries -lgnustep-base"
+      NSBUNDLE_GTK_DIR="GTK"
+      NSBUNDLE_LDFLAGS="-rdynamic -fgnu-runtime -L$GNUSTEP_SYSTEM_ROOT/Library/Libraries -lgnustep-base -Wl,-rpath=\\\$\$ORIGIN/$NSBUNDLE_GTK_DIR "
       AC_LANG_POP([Objective C])
    fi
    AC_DEFINE_UNQUOTED(NSBUNDLE, 1, [ Define to 1 to use NSBundle for relocation (OSX/GNUstep) ])
@@ -98,6 +101,7 @@ _AM_DEPENDENCIES([OBJC])
 
 AC_SUBST(NSBUNDLE_CPPFLAGS)
 AC_SUBST(NSBUNDLE_LDFLAGS)
+AC_SUBST(NSBUNDLE_GTK_DIR)
 
 # Todo: add a AC_ARG_WITH to allow change.
 bundlename=GCompris
