@@ -1,3 +1,12 @@
+2007-03-22  Yves Combe <yves@ycombe.net>
+
+	reloc gtk libs in osx bundle.
+	TODO: fix in GNUstep case.
+
+	* Makefile.am:
+	* configure.in:
+	* src/gcompris/gcompris-nsbundle.m:
+
 2007-03-20  Yves Combe <yves@ycombe.net>
 
 	Small correction
